# LegaBot

./: .gitignore  README.md  app.py  app_2.py  chat-dev.ipynb  config.yaml  pyproject.toml  requirements.txt  streamlit.py  utils.py
.github/workflows/: tests.yaml
.streamlit/: config.toml
database/: README.md  config.py  db-dev.ipynb  utils.py  vector_database.py
llm/: prompts.py  utils.py
router/: README.md  collection_centroids.json  query_router.py  router-dev.ipynb  router_prompt.py
scraper/: README.md  scraper-dev.ipynb  scraper.py  urls.txt
tests/: test_database.py  test_router.py
